build/kubernetes/staging-aws/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: staging-tone-api-service
  namespace: staging
  labels:
    app: staging-tone-api
    environment: staging
spec:
  selector:
    app: staging-tone-api
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
  type: ClusterIP
